force-app/main/default/objects/Onboarding_Task_Template__mdt/Onboarding_Task_Template__mdt.object-meta.xml
<CustomObject>
    <description>Defines the set of onboarding Tasks to be auto-created when an Account Type changes to Customer. Each record represents one Task template with timing, priority, and role assignment.</description>
    <label>Onboarding Task Template</label>
    <pluralLabel>Onboarding Task Templates</pluralLabel>
</CustomObject>