force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <description>The role name that should own this Task in future iterations. Currently Tasks are assigned to the Account Owner. This field is reserved for role-based assignment enhancements.</description>
    <label>Assigned Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>