force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Days_After_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Start__c</fullName>
    <description>Number of days after the onboarding start date (today) that the Task due date should be set.</description>
    <label>Days After Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>