force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this template record is excluded from Task creation. Allows administrators to disable individual template tasks without deleting the record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>