force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Task priority value to assign. Valid values mirror the standard Task Priority picklist: High, Normal, Low. Stored as Text because Custom Metadata does not support Picklist field type.</description>
    <label>Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>