force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject line for the Task that will be created from this template.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>